<resources>
    <string name="app_name">德益寿</string>
    <string name="main_home">首页</string>
    <string name="main_news">资讯</string>
    <string name="main_my">我的</string>
    <string name="main_service">客服</string>
    <string name="station_search">站内搜索</string>
    <string name="relate_recommond">相关推荐</string>
    <string name="news">资讯</string>
    <string name="service_kefu">客服</string>
    <string name="service_hot_line">客服热线</string>
    <string name="service_phone">4001692988</string>
    <string name="phone_call_introduce">点击即可拨打</string>
    <string name="no_data">没有发布的帖子</string>
    <string name="click_refresh">点击刷新</string>
    <string name="health_voice">福寿之声</string>
    <string name="login">登录</string>
    <string name="regitster">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="register_text">注册</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="has_verify">获取验证码</string>
    <string name="please_input_verify">请输入验证码</string>
    <string name="please_input_pass">请输入密码</string>
    <string name="please_reinput_pass">请确认密码</string>
    <string name="confirm_register">确认注册</string>
    <string name="now_go">立即体验</string>
    <string name="sign_enter">签到</string>
    <string name="click_sign">点击签到</string>
    <string name="has_sign_score">可用积分:%1d</string>
    <string name="sign_count">签到次数:%1d</string>
    <string name="every_day_sign">每日签到</string>
    <string name="health_voice_translate">声驰千里播长寿之道</string>
    <string name="health_body">眉寿之像</string>
    <string name="health_body_translate">影像心受释长寿之法</string>
    <string name="health_family">万寿家族</string>
    <string name="health_family_translate">济济一堂论长寿之方</string>
    <string name="health_prescription">百方长生</string>
    <string name="health_point">经穴长生</string>
    <string name="health_description">百方长生</string>
    <string name="related">相关推荐</string>
    <string name="health_method">功法长生</string>
    <string name="health_test">健康自测</string>
    <string name="party_category">活动类型:%1s</string>
    <string name="party_time">截止日期:%1s</string>
    <string name="change_score">积分兑换</string>
    <string name="party_formation_time">活动时间:%1s</string>
    <string name="party_formation_location">活动地点:%1s</string>
    <string name="party_formation_gather_location">活动集合地点:%1s</string>
    <string name="forget_has_verify_success">获取验证码成功</string>
    <string name="forget_verify_fail">验证失败</string>
    <string name="verify_callback_country">返回支持发送验证码的国家列表</string>
    <string name="verify_submit_success">提交验证码成功</string>
    <string name="phone_is_not_empty">手机号不能为空</string>
    <string name="phone_is_wrong">手机号格式错误,请检查</string>
    <string name="please_have_verify">获取验证码</string>
    <string name="comment">评论列表</string>
    <string name="say_what">说些什么…</string>
    <string name="send">发送</string>
    <string name="recommend">评论</string>
    <string name="write_comment">写评论</string>
    <string name="select_image">选取图片</string>
    <string name="please_input_comment">请输入评论（不超过20字）</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="select_from_camera">拍照</string>
    <string name="photo_jpg_must">请选取.jpg和.png的图片</string>
    <string name="log_out">退出登录</string>
    <string name="about_app">关于应用</string>
    <string name="setting">设置</string>
    <string name="adout_app_translate">\t\t德益寿是湖北德益寿健康管理有限公司推出的一款具有健康资讯,健康社区为一体的App,是中老年人的健康伴侣。</string>
    <string name="no_related_data">没有相关数据</string>
</resources>
