<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_rootview"
    android:fitsSystemWindows="true"
    tools:context="com.anshi.healthdeyi.MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_container"
        android:layout_above="@+id/main_rg"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@id/main_rg"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <RadioButton
            style="@style/home_radio_button"
            android:text="@string/main_home"
            android:id="@+id/main_home_rb"
            android:drawableTop="@drawable/main_home_selector"

            />
        <RadioButton
            style="@style/home_radio_button"
            android:text="@string/main_news"
            android:id="@+id/main_news_rb"
            android:drawableTop="@drawable/main_news_selector"

            />
        <RadioButton
            style="@style/home_radio_button"
            android:text="@string/main_my"
            android:id="@+id/main_my_rb"
            android:drawableTop="@drawable/main_my_selector"

            />
        <RadioButton
            style="@style/home_radio_button"
            android:text="@string/main_service"
            android:id="@+id/main_service_rb"
            android:drawableTop="@drawable/main_service_selector"

            />
    </RadioGroup>

</RelativeLayout>
