<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/back_selector"
            android:clickable="true"
            android:onClick="back"
            android:layout_gravity="center|start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/register_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    >
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/please_input_phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="phone"
        android:id="@+id/register_phone_input"
        android:textColorHint="@color/health_hint_color"
        android:textSize="14sp"
        android:background="@drawable/edit_back_red"
        android:layout_weight="7"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            >
            <RadioButton
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:button="@null"
                android:text="@string/has_verify"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textSize="12sp"
                android:id="@+id/has_verify_rb"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/login_btn_selector"
                />


        </RelativeLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/please_input_verify"
            android:paddingStart="10dp"
            android:id="@+id/register_verify_input"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:textColorHint="@color/health_hint_color"
            android:textSize="14sp"
            android:background="@drawable/edit_back_red"
            android:layout_weight="7"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/please_input_pass"
            android:inputType="textPassword"
            android:id="@+id/register_pass_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/health_hint_color"
            android:textSize="14sp"
            android:background="@drawable/edit_back_red"
            android:layout_weight="7"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/please_reinput_pass"
            android:inputType="textPassword"
            android:id="@+id/register_confirm_pass_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/health_hint_color"
            android:textSize="14sp"
            android:background="@drawable/edit_back_red"
            android:layout_weight="7"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"

            android:background="@drawable/login_btn_selector"
            android:text="@string/confirm_register"
            android:textColor="@color/white" />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>