<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@color/white"
        android:text="@string/service_kefu"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/smssdk_line_light_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/logo_service"
                android:id="@+id/service_logo"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/service_logo"
                android:id="@+id/version_name"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/phone_layout"
                android:layout_centerInParent="true"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_hot_line"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_phone"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/health_text_color"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_call_introduce"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/service_back"
            android:orientation="vertical"
            />
    </LinearLayout>
</LinearLayout>