<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/tool_bar_layout"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/back_selector"
            android:clickable="true"
            android:onClick="back"
            android:layout_gravity="center|start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_comment"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/voice_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <com.anshi.healthdeyi.view.self.CallBackScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fadingEdge="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:background="@drawable/edit_back_white"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/photo_back"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/pg_add_photo"
                        android:scaleType="centerInside"
                        android:contentDescription="@null"
                        android:id="@+id/easy_add_one"
                        />
                </RelativeLayout>
            </LinearLayout>
            <EditText
                android:id="@+id/easy_edit"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="60dp"
                android:maxLength="20"
                android:hint="@string/please_input_comment"
                android:textColorHint="@color/health_hint_color"
                android:background="@drawable/edit_back_white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/has_extra_num"
                android:layout_marginEnd="15dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textColor="#FFF"
                android:layout_margin="10dp"
                android:id="@+id/shop_modify"
                android:onClick="onClickTransLate"
                android:background="@drawable/login_btn_selector"
                />

        </LinearLayout>


    </com.anshi.healthdeyi.view.self.CallBackScrollView>
</LinearLayout>