<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:id="@+id/tool_bar_layout"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/back_selector"
            android:clickable="true"
            android:onClick="back"
            android:layout_gravity="center|start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/voice_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/divider"
        android:background="@color/smssdk_line_light_gray"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/refresh_layout"
            >
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/comment_recycler"
                />
        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@color/white"
            android:id="@+id/comment_layout"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:hint="@string/say_what"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/health_hint_color"
                android:inputType="text"
                android:background="@drawable/edit_back_grey"
                android:layout_margin="5dp"
                />
              <Button
                  android:layout_width="0dp"
                  android:layout_height="35dp"
                  android:layout_gravity="center"
                  android:layout_weight="1.5"
                  android:layout_marginEnd="5dp"
                  android:text="@string/send"
                  android:textColor="@color/white"
                  android:background="@drawable/login_btn_selector"
                  />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>