<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@null"
            android:src="@drawable/back_selector"
            android:clickable="true"
            android:onClick="back"
            android:layout_gravity="center|start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="7"
            android:background="@drawable/edit_back_red"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_icon"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:contentDescription="@null"
                />
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/health_hint_color"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/please_input_phone"
                android:id="@+id/login_input_phone"
                android:textSize="16sp"
                android:textColorHint="@color/health_hint_color"
                android:inputType="phone"
                android:layout_marginStart="5dp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="7"
            android:background="@drawable/edit_back_red"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pg_lock"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:contentDescription="@null"
                />
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/health_hint_color"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/please_input_pass"
                android:id="@+id/login_pass_input"
                android:textSize="16sp"
                android:textColorHint="@color/health_hint_color"
                android:inputType="textPassword"
                android:layout_marginStart="5dp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:textColor="@color/white"
            android:text="@string/login"
            android:onClick="login"
            android:background="@drawable/login_btn_selector"
            />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/regitster"
                android:onClick="toRegister"
                android:layout_centerVertical="true"
                android:textColor="@color/health_second_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass"
                android:onClick="toForgetPass"
                android:textColor="@color/health_second_text"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>